# xrsampler

./: BUILDING.md  LICENSE  README.md
src/samples/: replace_recursive.py
src/samples/Awful/: CMakeLists.txt  scan_logcat.py  settings.gradle.kts
src/samples/Awful/app/: build.gradle.kts
src/samples/Awful/app/src/androidTest/java/us/xyzw/awful/: ExampleInstrumentedTest.java
src/samples/Awful/app/src/main/: AndroidManifest.xml
src/samples/Awful/app/src/main/cpp/: CMakeLists.txt  GltfRenderer.cpp  GltfRenderer.h  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  gltfloader.cpp  gltfloader.h  linear.h  main.cpp  native-lib.cpp  xrapp.cpp  xrapp.h
src/samples/Awful/app/src/main/java/us/xyzw/awful/: MainActivity.java
src/samples/Awful/app/src/main/res/values/: strings.xml  themes.xml
src/samples/Awful/app/src/main/res/values-night/: themes.xml
src/samples/Awful/app/src/test/java/us/xyzw/awful/: ExampleUnitTest.java
src/samples/Awful/gradle/wrapper/: gradle-wrapper.properties
src/samples/Dreadful/: CMakeLists.txt  settings.gradle.kts
src/samples/Dreadful/app/: build.gradle.kts
src/samples/Dreadful/app/src/androidTest/java/us/xyzw/dreadful/: ExampleInstrumentedTest.java
src/samples/Dreadful/app/src/main/: AndroidManifest.xml
src/samples/Dreadful/app/src/main/cpp/: AndroidOut.h  CMakeLists.txt  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextureAsset.cpp  TextureAsset.h  Utility.cpp  Utility.h  linear.h  main.cpp  xrapp.cpp  xrapp.h  xrh.cpp  xrh.h  xrhlinear.h
src/samples/Dreadful/app/src/main/java/us/xyzw/dreadful/: MainActivity.java
src/samples/Dreadful/app/src/main/res/values/: strings.xml  themes.xml
src/samples/Dreadful/app/src/main/res/values-night/: themes.xml
src/samples/Dreadful/app/src/test/java/us/xyzw/dreadful/: ExampleUnitTest.java
src/tinygltf/: Makefile
src/xrh/: CMakeLists.txt
src/xrh/include/: linear.h  xrh.h  xrhlinear.h
src/xrh/src/: xrh.cpp
